--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "axios": "1.7.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-spinners": "^0.14.1",
+    "wouter": "3.3.5",
     "zustand": "4.5.5"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "2.0.4",
-    "@types/node": "22.5.2",
+    "@types/node": "22.5.3",
     "@types/react": "18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.4.0",
     "@typescript-eslint/parser": "8.4.0",
     "@vitejs/plugin-react-swc": "3.7.0",
@@ -27,7 +29,7 @@
     "eslint": "9.9.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react": "7.35.2",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tailwindcss": "3.17.4",
@@ -36,7 +38,7 @@
     "prettier-plugin-tailwindcss": "0.6.6",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
-    "vite": "5.4.2",
+    "vite": "5.4.3",
     "vite-plugin-svgr": "4.2.0",
     "vite-tsconfig-paths": "5.0.1"
   },
