--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "1.7.7",
+    "dompurify": "^3.1.6",
+    "fast-xml-parser": "^4.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-spinners": "^0.14.1",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "2.0.4",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "22.5.3",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
