--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "dependencies": {
     "axios": "1.7.7",
-    "dompurify": "^3.1.6",
-    "fast-xml-parser": "^4.5.0",
+    "dompurify": "3.1.6",
+    "fast-xml-parser": "4.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-spinners": "^0.14.1",
-    "usehooks-ts": "^3.1.0",
+    "react-spinners": "0.14.1",
+    "usehooks-ts": "3.1.0",
     "wouter": "3.3.5",
     "zustand": "4.5.5"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "2.0.4",
-    "@types/dompurify": "^3.0.5",
-    "@types/node": "22.5.3",
+    "@types/dompurify": "3.0.5",
+    "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.4.0",
@@ -37,7 +37,7 @@
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-tailwindcss": "3.17.4",
-    "postcss": "8.4.44",
+    "postcss": "8.4.45",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
     "tailwindcss": "3.4.10",
